[project]
name = "Practical1"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron D'Mello",email = "aaron.r.dmello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
